[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/collectibles_tools/wheat_collector/wheat_collector_collectible.glb" type="PackedScene" id=1]
[ext_resource path="res://wheat_collector_collectible.gd" type="Script" id=2]
[ext_resource path="res://wheat_collector.tscn" type="PackedScene" id=3]

[sub_resource type="ConcavePolygonShape" id=4]
data = PoolVector3Array( -0.5, -1, -0.866, 0, 0.913, -1, -0.5, 0.913, -0.866, -0.5, -1, -0.866, 0, -1, -1, 0, 0.913, -1, 0.8497, 1.0851, -0.4905, 0.4106, 1.8051, -0.7112, 0.4905, 1.0851, -0.8497, 0.8497, 1.0851, -0.4905, 0.7112, 1.8051, -0.4106, 0.4106, 1.8051, -0.7112, 0.9811, 1.0851, 0, 0.7112, 1.8051, -0.4106, 0.8497, 1.0851, -0.4905, 0.9811, 1.0851, 0, 0.8212, 1.8051, 0, 0.7112, 1.8051, -0.4106, 0.8497, 1.0851, 0.4905, 0.8212, 1.8051, 0, 0.9811, 1.0851, 0, 0.8497, 1.0851, 0.4905, 0.7112, 1.8051, 0.4106, 0.8212, 1.8051, 0, 0.4905, 1.0851, 0.8497, 0.7112, 1.8051, 0.4106, 0.8497, 1.0851, 0.4905, 0.4905, 1.0851, 0.8497, 0.4106, 1.8051, 0.7112, 0.7112, 1.8051, 0.4106, 0, 1.0851, 0.9811, 0.4106, 1.8051, 0.7112, 0.4905, 1.0851, 0.8497, 0, 1.0851, 0.9811, 0, 1.8051, 0.8212, 0.4106, 1.8051, 0.7112, -0.4905, 1.0851, 0.8497, 0, 1.8051, 0.8212, 0, 1.0851, 0.9811, -0.4905, 1.0851, 0.8497, -0.4106, 1.8051, 0.7112, 0, 1.8051, 0.8212, -0.8497, 1.0851, 0.4905, -0.4106, 1.8051, 0.7112, -0.4905, 1.0851, 0.8497, -0.8497, 1.0851, 0.4905, -0.7112, 1.8051, 0.4106, -0.4106, 1.8051, 0.7112, -0.9811, 1.0851, 0, -0.7112, 1.8051, 0.4106, -0.8497, 1.0851, 0.4905, -0.9811, 1.0851, 0, -0.8212, 1.8051, 0, -0.7112, 1.8051, 0.4106, -0.8497, 1.0851, -0.4905, -0.8212, 1.8051, 0, -0.9811, 1.0851, 0, -0.8497, 1.0851, -0.4905, -0.7112, 1.8051, -0.4106, -0.8212, 1.8051, 0, 0.6168, 1.8902, -0.3561, 0, 1.8902, -0.7122, 0.3561, 1.8902, -0.6168, 0, 1.8902, -0.7122, -0.6168, 1.8902, -0.3561, -0.3561, 1.8902, -0.6168, -0.6168, 1.8902, -0.3561, -0.6168, 1.8902, 0.3561, -0.7122, 1.8902, 0, -0.6168, 1.8902, 0.3561, 0, 1.8902, 0.7122, -0.3561, 1.8902, 0.6168, 0, 1.8902, 0.7122, 0.6168, 1.8902, 0.3561, 0.3561, 1.8902, 0.6168, 0.6168, 1.8902, 0.3561, 0.6168, 1.8902, -0.3561, 0.7122, 1.8902, 0, 0.6168, 1.8902, -0.3561, -0.6168, 1.8902, -0.3561, 0, 1.8902, -0.7122, -0.6168, 1.8902, -0.3561, 0, 1.8902, 0.7122, -0.6168, 1.8902, 0.3561, 0, 1.8902, 0.7122, 0.6168, 1.8902, -0.3561, 0.6168, 1.8902, 0.3561, -0.6168, 1.8902, -0.3561, 0.6168, 1.8902, -0.3561, 0, 1.8902, 0.7122, -0.4905, 1.0851, -0.8497, -0.7112, 1.8051, -0.4106, -0.8497, 1.0851, -0.4905, -0.4905, 1.0851, -0.8497, -0.4106, 1.8051, -0.7112, -0.7112, 1.8051, -0.4106, 0, 1.0851, -0.9811, -0.4106, 1.8051, -0.7112, -0.4905, 1.0851, -0.8497, 0, 1.0851, -0.9811, 0, 1.8051, -0.8212, -0.4106, 1.8051, -0.7112, -0.5, -1, -0.866, 0.5, -1, -0.866, 0, -1, -1, 0.5, -1, -0.866, 1, -1, 0, 0.866, -1, -0.5, 1, -1, 0, 0.5, -1, 0.866, 0.866, -1, 0.5, 0.5, -1, 0.866, -0.5, -1, 0.866, 0, -1, 1, -0.5, -1, 0.866, -1, -1, 0, -0.866, -1, 0.5, -1, -1, 0, -0.5, -1, -0.866, -0.866, -1, -0.5, -0.5, -1, -0.866, 1, -1, 0, 0.5, -1, -0.866, 1, -1, 0, -0.5, -1, 0.866, 0.5, -1, 0.866, -0.5, -1, 0.866, -0.5, -1, -0.866, -1, -1, 0, 1, -1, 0, -0.5, -1, -0.866, -0.5, -1, 0.866, 0.866, -1, -0.5, 1, 0.913, 0, 0.866, 0.913, -0.5, 0.866, -1, -0.5, 1, -1, 0, 1, 0.913, 0, -0.866, -1, -0.5, -0.5, 0.913, -0.866, -0.866, 0.913, -0.5, -0.866, -1, -0.5, -0.5, -1, -0.866, -0.5, 0.913, -0.866, -1, -1, 0, -0.866, 0.913, -0.5, -1, 0.913, 0, -1, -1, 0, -0.866, -1, -0.5, -0.866, 0.913, -0.5, -0.866, -1, 0.5, -1, 0.913, 0, -0.866, 0.913, 0.5, -0.866, -1, 0.5, -1, -1, 0, -1, 0.913, 0, -0.5, -1, 0.866, -0.866, 0.913, 0.5, -0.5, 0.913, 0.866, -0.5, -1, 0.866, -0.866, -1, 0.5, -0.866, 0.913, 0.5, 0, -1, 1, -0.5, 0.913, 0.866, 0, 0.913, 1, 0, -1, 1, -0.5, -1, 0.866, -0.5, 0.913, 0.866, 0.5, -1, 0.866, 0, 0.913, 1, 0.5, 0.913, 0.866, 0.5, -1, 0.866, 0, -1, 1, 0, 0.913, 1, 0.866, -1, 0.5, 0.5, 0.913, 0.866, 0.866, 0.913, 0.5, 0.866, -1, 0.5, 0.5, -1, 0.866, 0.5, 0.913, 0.866, 0.5, -1, -0.866, 0.866, 0.913, -0.5, 0.5, 0.913, -0.866, 0.5, -1, -0.866, 0.866, -1, -0.5, 0.866, 0.913, -0.5, 0, -1, -1, 0.5, 0.913, -0.866, 0, 0.913, -1, 0, -1, -1, 0.5, -1, -0.866, 0.5, 0.913, -0.866, 1, -1, 0, 0.866, 0.913, 0.5, 1, 0.913, 0, 1, -1, 0, 0.866, -1, 0.5, 0.866, 0.913, 0.5, 0.5, 0.913, -0.866, 0, 1.0851, -0.9811, 0, 0.913, -1, 0.5, 0.913, -0.866, 0.4905, 1.0851, -0.8497, 0, 1.0851, -0.9811, 0.866, 0.913, -0.5, 0.4905, 1.0851, -0.8497, 0.5, 0.913, -0.866, 0.866, 0.913, -0.5, 0.8497, 1.0851, -0.4905, 0.4905, 1.0851, -0.8497, 1, 0.913, 0, 0.8497, 1.0851, -0.4905, 0.866, 0.913, -0.5, 1, 0.913, 0, 0.9811, 1.0851, 0, 0.8497, 1.0851, -0.4905, 0.866, 0.913, 0.5, 0.9811, 1.0851, 0, 1, 0.913, 0, 0.866, 0.913, 0.5, 0.8497, 1.0851, 0.4905, 0.9811, 1.0851, 0, 0.5, 0.913, 0.866, 0.8497, 1.0851, 0.4905, 0.866, 0.913, 0.5, 0.5, 0.913, 0.866, 0.4905, 1.0851, 0.8497, 0.8497, 1.0851, 0.4905, 0, 0.913, 1, 0.4905, 1.0851, 0.8497, 0.5, 0.913, 0.866, 0, 0.913, 1, 0, 1.0851, 0.9811, 0.4905, 1.0851, 0.8497, -0.5, 0.913, 0.866, 0, 1.0851, 0.9811, 0, 0.913, 1, -0.5, 0.913, 0.866, -0.4905, 1.0851, 0.8497, 0, 1.0851, 0.9811, -0.866, 0.913, 0.5, -0.4905, 1.0851, 0.8497, -0.5, 0.913, 0.866, -0.866, 0.913, 0.5, -0.8497, 1.0851, 0.4905, -0.4905, 1.0851, 0.8497, -1, 0.913, 0, -0.8497, 1.0851, 0.4905, -0.866, 0.913, 0.5, -1, 0.913, 0, -0.9811, 1.0851, 0, -0.8497, 1.0851, 0.4905, -0.866, 0.913, -0.5, -0.9811, 1.0851, 0, -1, 0.913, 0, -0.866, 0.913, -0.5, -0.8497, 1.0851, -0.4905, -0.9811, 1.0851, 0, -0.5, 0.913, -0.866, -0.8497, 1.0851, -0.4905, -0.866, 0.913, -0.5, -0.5, 0.913, -0.866, -0.4905, 1.0851, -0.8497, -0.8497, 1.0851, -0.4905, 0, 0.913, -1, -0.4905, 1.0851, -0.8497, -0.5, 0.913, -0.866, 0, 0.913, -1, 0, 1.0851, -0.9811, -0.4905, 1.0851, -0.8497, 0.4106, 1.8051, -0.7112, 0, 1.8902, -0.7122, 0, 1.8051, -0.8212, 0.4106, 1.8051, -0.7112, 0.3561, 1.8902, -0.6168, 0, 1.8902, -0.7122, 0.7112, 1.8051, -0.4106, 0.3561, 1.8902, -0.6168, 0.4106, 1.8051, -0.7112, 0.7112, 1.8051, -0.4106, 0.6168, 1.8902, -0.3561, 0.3561, 1.8902, -0.6168, 0.8212, 1.8051, 0, 0.6168, 1.8902, -0.3561, 0.7112, 1.8051, -0.4106, 0.8212, 1.8051, 0, 0.7122, 1.8902, 0, 0.6168, 1.8902, -0.3561, 0.7112, 1.8051, 0.4106, 0.7122, 1.8902, 0, 0.8212, 1.8051, 0, 0.7112, 1.8051, 0.4106, 0.6168, 1.8902, 0.3561, 0.7122, 1.8902, 0, 0.4106, 1.8051, 0.7112, 0.6168, 1.8902, 0.3561, 0.7112, 1.8051, 0.4106, 0.4106, 1.8051, 0.7112, 0.3561, 1.8902, 0.6168, 0.6168, 1.8902, 0.3561, 0, 1.8051, 0.8212, 0.3561, 1.8902, 0.6168, 0.4106, 1.8051, 0.7112, 0, 1.8051, 0.8212, 0, 1.8902, 0.7122, 0.3561, 1.8902, 0.6168, -0.4106, 1.8051, 0.7112, 0, 1.8902, 0.7122, 0, 1.8051, 0.8212, -0.4106, 1.8051, 0.7112, -0.3561, 1.8902, 0.6168, 0, 1.8902, 0.7122, -0.7112, 1.8051, 0.4106, -0.3561, 1.8902, 0.6168, -0.4106, 1.8051, 0.7112, -0.7112, 1.8051, 0.4106, -0.6168, 1.8902, 0.3561, -0.3561, 1.8902, 0.6168, -0.8212, 1.8051, 0, -0.6168, 1.8902, 0.3561, -0.7112, 1.8051, 0.4106, -0.8212, 1.8051, 0, -0.7122, 1.8902, 0, -0.6168, 1.8902, 0.3561, -0.7112, 1.8051, -0.4106, -0.7122, 1.8902, 0, -0.8212, 1.8051, 0, -0.7112, 1.8051, -0.4106, -0.6168, 1.8902, -0.3561, -0.7122, 1.8902, 0, -0.4106, 1.8051, -0.7112, -0.6168, 1.8902, -0.3561, -0.7112, 1.8051, -0.4106, -0.4106, 1.8051, -0.7112, -0.3561, 1.8902, -0.6168, -0.6168, 1.8902, -0.3561, 0, 1.8051, -0.8212, -0.3561, 1.8902, -0.6168, -0.4106, 1.8051, -0.7112, 0, 1.8051, -0.8212, 0, 1.8902, -0.7122, -0.3561, 1.8902, -0.6168, 0.4905, 1.0851, -0.8497, 0, 1.8051, -0.8212, 0, 1.0851, -0.9811, 0.4905, 1.0851, -0.8497, 0.4106, 1.8051, -0.7112, 0, 1.8051, -0.8212 )

[sub_resource type="Animation" id=1]
length = 4.0
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("wheat_collector_collectible:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -0.2, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, 0.2, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wheat_collector_collectible:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 180, 0 ), Vector3( 0, 360, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "wcc"
length = 2.4
loop = true

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.588405, 1.21435, 0.651469 )

[node name="wheat_collector_collectible" instance=ExtResource( 1 )]
script = ExtResource( 2 )
wheat_collect_scene = ExtResource( 3 )

[node name="StaticBody" type="StaticBody" parent="Stand" index="0"]

[node name="CollisionShape" type="CollisionShape" parent="Stand/StaticBody" index="0"]
shape = SubResource( 4 )

[node name="wheat_collector_collectible" parent="." index="1"]
transform = Transform( -0.268989, 0, 0.963143, 0, 1, 0, -0.963143, 0, -0.268989, 0, -0.165324, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
autoplay = "RESET"
anims/RESET = SubResource( 1 )
anims/wcc = SubResource( 2 )

[node name="Area" type="Area" parent="." index="3"]

[node name="CollisionShape" type="CollisionShape" parent="Area" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.19748, 0 )
shape = SubResource( 3 )

[node name="CollectibleTimer" type="Timer" parent="." index="4"]
wait_time = 30.0
one_shot = true

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="CollectibleTimer" to="." method="_on_CollectibleTimer_timeout"]
